添加 agent log utils